--- a/.theia/launch.json
+++ b/.theia/launch.json
@@ -3,6 +3,12 @@
   // Hover to view descriptions of existing attributes.
   "version": "0.2.0",
   "configurations": [
-      
+  {
+      "name": "Attach to Process",
+      "type": "go",
+      "request": "attach",
+      "mode": "local",
+      "processId": 0
+  }
   ]
 }
